# home-upkeep-addon

./: .devcontainer.json  .gitattributes  .gitignore  README.md  repository.json
.github/workflows/: build.yaml  release.yaml
home-upkeep/: Dockerfile  README.md  build.yaml  config.yaml
home-upkeep/backend/: README.md  pyproject.toml
home-upkeep/backend/app/: __init__.py  main.py  schemas.py
home-upkeep/backend/app/storage/: __init__.py  file_store.py  memory.py  models.py  store.py
home-upkeep/frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
home-upkeep/frontend/src/: dates.ts  index.css  main.tsx
home-upkeep/frontend/src/api/: client.ts
home-upkeep/frontend/src/ui/: App.tsx  CreateListDialog.tsx  EditListDialog.tsx  EditTaskDialog.tsx  SnoozeDialog.tsx  TaskForm.tsx  TaskItem.tsx  TaskLists.tsx
home-upkeep/rootfs/etc/nginx/http.d/: ingress.conf.template
home-upkeep/rootfs/etc/s6-overlay/s6-rc.d/backend/: finish  run
home-upkeep/rootfs/etc/s6-overlay/s6-rc.d/webui/: finish  run
home-upkeep/translations/: en.yaml
